--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@tailwindcss/forms": "^0.5.2",
     "core-js": "^3.8.3",
     "jquery": "^3.6.0",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.16"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
