--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
     "core-js": "^3.8.3",
+    "firebase": "^9.9.0",
     "jquery": "^3.6.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13"
